--- a/packages/augur-ui/package.json
+++ b/packages/augur-ui/package.json
@@ -17,7 +17,7 @@
     "nuke": "yarn clean; rm yarn.lock; rm package-lock.json",
     "dev": "yarn dev:orbit && yarn dev:ui",
     "dev:orbit": "yarn workspace orbit-web build",
-    "dev:ui": "node scripts/dev.js",
+    "dev:ui": "nyc --temp-dir ../../../.nyc_output node scripts/dev.js",
     "build": "yarn build:orbit && yarn build:ui",
     "build:orbit": "yarn workspace orbit-web build",
     "build:ui": "NODE_OPTIONS='--max-old-space-size=6144' webpack",
@@ -147,6 +147,7 @@
     "ignore-styles": "5.0.1",
     "inline-source-cli": "1.2.0",
     "istanbul": "1.1.0-alpha.1",
+    "istanbul-instrumenter-loader": "^3.0.1",
     "jest-cli": "24.9.0",
     "less": "3.10.3",
     "less-loader": "5.0.0",
